reorganizing, and zero alloc for hash